# CMakeExtended

./: LICENSE.md  README.md
examples/simple_executable/: CMakeLists.txt
examples/simple_library/: CMakeLists.txt
examples/simple_library/examples/: CMakeLists.txt  simple_library_example.cpp
examples/simple_library/include/: simple_library.hpp
examples/simple_library/sources/: CMakeLists.txt  simple_library.cpp
modules/: FindFREEGLUT.cmake  FindGLFW3.cmake  FindSDL2.cmake
